@@ -276,11 +276,8 @@ class ImagePage extends Article {
 					$select .= $wgOut->parse( wfMsg( 'imgmultigotopre' ), false ) .
 						' <select id="pageselector" name="page">';
 					for ( $i=1; $i <= $count; $i++ ) {
-						if ( $i == $page ) {
-							$select .= "<option value=\"$i\" selected=\"selected\">$i</option>";
-						} else {
-							$select .= "<option value=\"$i\" >$i</option>\n";
-						}
+						$select .= Xml::option( $wgLang->formatNum( $i ), $i,
+							$i == $page );
 					}
 					$select .= '</select>' . $wgOut->parse( wfMsg( 'imgmultigotopost' ), false ) .
 						'<input type="submit" value="' .
